--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-spring.datasource.url=jdbc:sqlserver://59.10.114.201:1433;databaseName=GravityEmailAuth;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=dkTk##&##&
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# application.properties
+spring.profiles.active=test
